--- a/conclusion.tex
+++ b/conclusion.tex
@@ -8,7 +8,7 @@ When $k^2$ becomes larger, this is less so, however the method is still converge
 
 A discussion of the issues that might have caused problems were detailed.
 For example, the problem with variable coefficients for the multigrid iteration and the indefiniteness of the Helmholtz discretisation.
-In the end, these issues were succesfully overcome or did not pose a problem at all.
+In the end, these issues were successfully overcome or did not pose a problem at all.
 The shifted-Laplacian preconditioner works well in the change of variables, with results consistent with the existing literature.
 
 In summary, it has been shown that a multigrid based preconditioner for FGMRES is a viable method for solving the finite element discretisation of the Fourier decomposed Helmholtz equation in cylindrical coordinates.
@@ -21,7 +21,7 @@ In summary, it has been shown that a multigrid based preconditioner for FGMRES i
 
 \section{Further work}
 
-This work has only considered and implementated Dirichlet boundaries.
+This work has only considered and implemented Dirichlet boundaries.
 A first step to extend the results would be to introduce other boundary conditions, including absorbing boundary conditions.
 The simplifications were appropriate for initial work, but applications likely will involve non-essential boundaries.
 For this work to be of any use in the future, this should be handled first.
