--- a/fem.tex
+++ b/fem.tex
@@ -161,7 +161,7 @@ If $u_r$ is the real part of the solution and $u_c$ is the imaginary part, then
 \begin{align}
 	u_N = u_r + i u_c.
 \end{align}
-Substituting this into \eqref{eqn:weakform} and separating real and imaginary parts will acheive this.
+Substituting this into \eqref{eqn:weakform} and separating real and imaginary parts will achieve this.
 
 
 
