--- a/introduction.tex
+++ b/introduction.tex
@@ -3,7 +3,7 @@
 % Applications and who cares
 
 The fundamental nature of waves means that waves appear in many different contexts in science, engineering, and industry.
-For example, in electromagnetics, Maxwell's equations describe the physical properties of waves generated from electric and magnetic fields.
+For example, in electromagnetism, Maxwell's equations describe the physical properties of waves generated from electric and magnetic fields.
 In acoustics, the propagation of sound waves may be modelled by the same equations.
 Modelling of seismic waves can aid in the search for materials or objects underground and help to better understand earthquakes.
 Understanding and modelling the scattering of waves is of great importance and practical use.
@@ -58,8 +58,8 @@ Because the problem is defined on an infinite domain, we must perform a truncati
 Choosing some appropriately sized region of interest surrounding the object, we restrict the domain to this region.
 However, this causes problems with waves interacting with the boundary of the truncated domain.
 Spurious waves from reflections on the outer walls propagate through the domain and the resulting solution is no longer correct.
-It is possible to deal with these reflections by introducing an artifical absorbing layer to the boundary of the domain.
-Several such layers exist, for instane absorbing boundary conditions (ABCs); Dirichlet-to-Neumann condtions (DtNs); and perfectly matched layers (PMLs).
+It is possible to deal with these reflections by introducing an artificial absorbing layer to the boundary of the domain.
+Several such layers exist, for instance absorbing boundary conditions (ABCs); Dirichlet-to-Neumann conditions (DtNs); and perfectly matched layers (PMLs).
 These all attempt to dampen waves in the artificial layer surrounding the domain so that there are no reflections back into the domain.
 
 
