--- a/problem.tex
+++ b/problem.tex
@@ -128,7 +128,7 @@ These two parameters together determine the equation and thus the solutions for 
 
 \subsection{Multigrid for the Helmholtz equation}
 
-There are difficulities in solving the Helmholtz equation using multigrid as the solver.
+There are difficulties in solving the Helmholtz equation using multigrid as the solver.
 This is especially true for even moderate values of $k^2$.
 Large values of $k^2$ cause the discretisation matrix to be indefinite, causing the solver to not converge.
 Work has been done by several authors in order to overcome this shortcoming of multigrid \cite{cslp1, cslp2}.
@@ -213,7 +213,7 @@ A test of the method should be performed first to confirm before attempting to r
 \section{Domain and boundary conditions}
 
 The full wave equation \eqref{eqn:wave} is defined in three spatial dimensions and one temporal dimension.
-The full cylindrical Helmholtz equtation \eqref{eqn:full_eqn} is defined in a cylinder in three spatial dimensions.
+The full cylindrical Helmholtz equation \eqref{eqn:full_eqn} is defined in a cylinder in three spatial dimensions.
 If we let the cylindrical domain have a maximum radius of $R_{\mathrm{max}} > 0$, and let the domain contain a cylindrical cavity with some maximum radius $0<R_{\mathrm{min}}<R_\mathrm{max}$.
 Then resulting domain is shown in figure \ref{fig:full_domain}.
 
