--- a/results.tex
+++ b/results.tex
@@ -32,7 +32,7 @@ Instead of using this fix, we keep the domain the same for all experiments, but 
 
 The machines used to run the numerical experiments had a total of 130GB of RAM.
 Unfortunately this means that when the number of degrees of freedom of the problem reached $1.3\times 10^7$, equivalent to seven refinement levels, the computer ran out of memory.
-Because of this, only six data points have beeen gathered for each individual problem, corresponding to the six levels of refinement that were able to run.
+Because of this, only six data points have been gathered for each individual problem, corresponding to the six levels of refinement that were able to run.
 This appears to be sufficient to begin to see the trend in the data, as can be seen below.
 The direct solver SuperLU is responsible for this drawback in the results, and multigrid performed adequately for even more levels of refinement.
 
